# Yag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fetch_content.bat  fetch_content.sh  fetch_dub.bat  fetch_dub.sh  pyproject.toml  start.bat  start.sh  stop.bat  stop.sh
content_engine/: main.py
content_engine/filters/: __init__.py  virality.py
content_engine/sources/: __init__.py  base.py  reddit.py  rss.py  youtube.py
dub_factory/: dataset.py  dubber.py  main.py  sources.py  translator.py  tts.py
landing/: package.json
landing/src/app/: globals.css  layout.tsx
landing/src/app/api/checkout/: route.ts
landing/src/components/: Features.tsx  Footer.tsx  Hero.tsx  Pricing.tsx
payments/: api.py
payments/providers/: __init__.py  prodamus.py  yookassa.py
publisher/: main.py
publisher/channels/: __init__.py  base.py  instagram_reels.py  tg_channel.py  youtube_shorts.py
scripts/: get_yt_token.py  migrate.py
shared/: config.py  logger.py  queue.py
shared/db/: __init__.py  models.py  session.py
shared/llm/: __init__.py  claude_client.py
tg_admin_bot/: keyboards.py  main.py
tg_admin_bot/handlers/: __init__.py  commands.py  dataset.py  review.py
tg_subscriber_bot/: drip.py  main.py  payments_listener.py
tg_subscriber_bot/campaigns/: __init__.py  warming.py
tg_subscriber_bot/handlers/: __init__.py  start.py
video_factory/: clipper.py  downloader.py  main.py  transcriber.py
